# Timer_Project_TSL

./: Applicazione.cpp  Applicazione.h  CMakeLists.txt  CronoTest.cpp  CronoType.cpp  CronoType.h  Cronometro.cpp  Cronometro.h  MainFrame.cpp  MainFrame.h  OroTest.cpp  OroType.cpp  OroType.h  Orologio.cpp  Orologio.h  RunTest.cpp  Timer.cpp  Timer.h  TimerTest.cpp  TimerType.cpp  TimerType.h  main.cpp
